# bookstore_fastapi_api

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: df4983b43c44_user_change.py
books/: crud.py  models.py  schemas.py
db/: base.py  session.py
users/: crud.py  models.py  schemas.py
